--- a/src/App.css
+++ b/src/App.css
@@ -100,8 +100,8 @@ video {
 }
 
 @media (orientation:landscape)
-and (min-device-width: 320px) 
-and (max-device-width: 767px) {
+and (min-width: 320px) 
+and (max-width: 911px) {
     .App-body {
     flex-direction: row;
   }
